--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   
 </body>
 <h1>ブラウザの挙動テスト</h1>
-<form method="post" action="http://localhost:8000/posts">
-  <input type="hidden" name="content" value="まんまと罠にかかりましたね">
+<form method="post" action="http://localhost:8000/posts?delete=1">
+  <input type="hidden" name="content" value="10">
   <button type="submit">ボタンを押してみてください</button>
 </form>
 </html>
