--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
   <title>偽物の投稿フォーム</title>
 </head>
 <body>
-  
-</body>
 <h1>ブラウザの挙動テスト</h1>
 <form method="post" action="http://localhost:8000/posts?delete=1">
-  <input type="hidden" name="id" value="1">
+  <input type="hidden" name="id" value="1"></input>
   <button type="submit">ボタンを押してみてください</button>
 </form>
+</body>
 </html>
